Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30775

Regression: Cannot minimize windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.1.0 Beta 1
    • 5.1.0
    • GUI: Look'n'Feel
    • Mac OS X 10.8, Qt 5/stable (qtbase c1ac77b34c20be797502551a9c57f7b4b2d20aae)
    • 38bf6da7ddaa6975ea00c27144fcbc70c789d398

    Description

      The minimize button is disabled, see screenshot. Also reproducible with dummy GUI project.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dedietri Gabriel de Dietrich (drgvond)
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes